--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
     "prefer-stable": true,
     "config": {
         "allow-plugins": {
-            "pestphp/pest-plugin": "*"
+            "pestphp/pest-plugin": true
         },
         "sort-packages": true,
         "preferred-install": "dist"
